--- a/ACL4SSR_Online_Full_2.ini
+++ b/ACL4SSR_Online_Full_2.ini
@@ -23,6 +23,7 @@ ruleset=🎮 游戏平台,clash-classic:https://raw.githubusercontent.com/blackm
 ruleset=📹 YouTube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🎥 奈飞,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=🎵 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
+ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🎯 直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
@@ -48,6 +49,7 @@ custom_proxy_group=♻️ 美国自动`url-test`(美国|US|United States)`http:/
 custom_proxy_group=🌐 其他地区`select`(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|日本|JP|Japan|新加坡|坡|SG|Singapore|美国|US|United States|台湾|台|TW|Taiwan)).*)
 custom_proxy_group=📲 电报`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 直连
 custom_proxy_group=📚 多邻国`select`[]🎯 直连`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🚀 节点选择
+custom_proxy_group=🍀 谷歌`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 直连
 custom_proxy_group=🏫 国外学术`select`[]🎯 直连`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🚀 节点选择
 custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 直连
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 直连
@@ -60,8 +62,8 @@ custom_proxy_group=Ⓜ️ 微软Bing`select`[]🎯 直连`[]🚀 节点选择`[]
 custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 直连
 custom_proxy_group=🪟 微软`select`[]🎯 直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动
 custom_proxy_group=🍎 苹果`select`[]🎯 直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动
-custom_proxy_group=🍀 谷歌`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 直连
 custom_proxy_group=🎵 TikTok`select`[]🇯🇵 日本节点`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 直连
+custom_proxy_group=🌏 国内媒体`select`[]🎯 直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🌐 其他地区
 custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 直连
 custom_proxy_group=🎯 直连`select`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]♻️ 香港自动`[]♻️ 台湾自动`[]♻️ 日本自动`[]♻️ 新加坡自动`[]♻️ 美国自动`[]🎯 直连
